fixed overflow cat

--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -12,6 +12,8 @@ body,html
   line-height: 2
   font-size: 16px
   scroll-behavior: smooth
+  width: 100vw
+  overflow-x: hidden
   @media screen and (max-width: 768px)
     font-size: 14px
 .container
